--- a/References.tex
+++ b/References.tex
@@ -1,19 +1,54 @@
 
-Robovetter: https://iopscience.iop.org/article/10.3847/0067-0049/224/1/12/pdf\\
-Autovetter: https://arxiv.org/abs/1408.1496
 
 
 \begin{thebibliography}{99}
 
+% \bibitem{Kepler}
 
-\bibitem{einstein15}
- 	\href{http://www.gsjournal.net/old/eeuro/vankov.pdf}{Einstein, A. 1915. \emph{Explanation of the
-	Perihelion Motion of Mercury from General Relativity Theory}. Koniglich Preußische Akademie der Wissenschaften (Berlin). Sitzungsberichte: 831-839}
+
+
+% \bibitem{tess}
+
+
+% \bibitem{plato}
+
+
+
+% \bibitem{ariel}
+
+% \bibitem{Robovetter}
+%  	\href{https://ui.adsabs.harvard.edu/abs/2015ApJ...806....6M}{Einstein, A. 1915. \emph{Explanation of the
+% 	Perihelion Motion of Mercury from General Relativity Theory}. Koniglich Preußische Akademie der Wissenschaften (Berlin). Sitzungsberichte: 831-839}
+
+% \bibitem{einstein15}
+%  	\href{http://www.gsjournal.net/old/eeuro/vankov.pdf}{Einstein, A. 1915. \emph{Explanation of the
+% 	Perihelion Motion of Mercury from General Relativity Theory}. Koniglich Preußische Akademie der Wissenschaften (Berlin). Sitzungsberichte: 831-839}
 	
-\bibitem{oppenheimer39}
-	\href{http://journals.aps.org/pr/abstract/10.1103/PhysRev.55.374}{Oppenheimer, J. R. and Volkoff, G. M. 1939. \emph{On Massive Neutron Cores}. Phys. Rev. 55, 374}
+% \bibitem{oppenheimer39}
+% 	\href{http://journals.aps.org/pr/abstract/10.1103/PhysRev.55.374}{Oppenheimer, J. R. and Volkoff, G. M. 1939. \emph{On Massive Neutron Cores}. Phys. Rev. 55, 374}
 	
-\bibitem{ligo11}
-	\href{https://arxiv.org/pdf/1102.3781v1.pdf}{Abadie, J, and Abbott, B.P. et al. (LIGO Scientific Collaboration and Virgo 	Collaboration). 2011. \emph{Search for gravitational waves from binary black hole inspiral, merger and ringdown}.  		arXiv:1102.3781}
+% \bibitem{ligo11}
+% 	\href{https://arxiv.org/pdf/1102.3781v1.pdf}{Abadie, J, and Abbott, B.P. et al. (LIGO Scientific Collaboration and Virgo 	Collaboration). 2011. \emph{Search for gravitational waves from binary black hole inspiral, merger and ringdown}.  		arXiv:1102.3781}
+
+\bibliography{2018AJ....155...94S,
+       author = {{Shallue}, Christopher J. and {Vanderburg}, Andrew},
+        title = "{Identifying Exoplanets with Deep Learning: A Five-planet Resonant Chain around Kepler-80 and an Eighth Planet around Kepler-90}",
+      journal = {\aj},
+     keywords = {methods: data analysis, planets and satellites: detection, techniques: photometric, Astrophysics - Earth and Planetary Astrophysics, Astrophysics - Instrumentation and Methods for Astrophysics},
+         year = 2018,
+        month = feb,
+       volume = {155},
+       number = {2},
+          eid = {94},
+        pages = {94},
+          doi = {10.3847/1538-3881/aa9e09},
+archivePrefix = {arXiv},
+       eprint = {1712.05044},
+ primaryClass = {astro-ph.EP},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2018AJ....155...94S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
 
 \end{thebibliography}
