--- a/main.tex
+++ b/main.tex
@@ -36,9 +36,8 @@
 \pagestyle{fancyplain}
 %\fancyhead{}									% No page header
 \fancyhead[R]{\thepage}
-\fancyhead[L]{\small{Exoplanet Transit Classification
-and \\
-Parameterization using Recurrent Neural Networks}}
+\fancyhead[L]{\small{Exoplanet Transit Classification \\
+using Recurrent Neural Networks}}
 \fancyfoot[L]{\small{Chetan Chawla}}
 \fancyfoot[C]{}					
 \fancyfoot[R]{\small{\today}}			
@@ -62,7 +61,7 @@ Parameterization using Recurrent Neural Networks}}
 		\usefont{OT1}{bch}{b}{n}
 		\normalfont \normalsize \textsc{Intro To Astro 2020 - Final Project Proposal} \\ [25pt]
 		\horrule{0.5pt} \\[0.4cm]
-		\huge Exoplanet Transit Classification and Parameterization using Recurrent Neural Networks \\
+		\huge Exoplanet Transit Classification using Recurrent Neural Networks \\
 		\horrule{2pt} \\[0.5cm]
 }
 
@@ -77,7 +76,7 @@ Parameterization using Recurrent Neural Networks}}
 %%% Begin document
 \begin{document}
 \maketitle
-
+\vspace{-1.5cm}
 \section{Introduction}
 \input{Introduction}
 
@@ -91,7 +90,10 @@ Parameterization using Recurrent Neural Networks}}
 \input{Conclusions}
 
 %Refrences
-\input{References}
+%\input{References}
+
+\bibliographystyle{unsrt}
+\bibliography{references.bib}
 
 %%% End document
 \end{document}
