--- a/Conclusions.tex
+++ b/Conclusions.tex
@@ -1,1 +1,2 @@
-We have studied the developments in the field of Exoplanet Transit Classification and found that Machine Learning and Deep Learning techniques are rapidly being developed and integrated in the field due to their success in yielding high accuracy results and reducing manual effort to vet the large number of TCEs produced by space based telescopes like Kepler and TESS. However, we are not aware of any work which experimented with Recurrent Neural Networks to add the temporal connection analysis in the picture. We believe that it can provide a significant boost in the accuracy and precision metrics when combined with the already successful models like Astronet and Exonet, and we would like to experiment this hypothesis.
+We have studied the developments in the field of Exoplanet Transit Classification and found that Machine Learning and Deep Learning techniques are rapidly being developed and integrated in the field due to their success in yielding high accuracy results and reducing manual effort to vet the large number of TCEs produced by space based telescopes like Kepler and TESS. However, we are not aware of any work which experimented with Recurrent Neural Networks to add the temporal connection analysis in the picture. We believe that it can provide a significant boost in the accuracy and precision metrics when combined with the already successful models like Astronet and Exonet, and we would like to experiment this hypothesis.\\
+A one slide intro for the research proposal can be viewed at:  \href{https://exornet.netlify.app}{exornet.netlify.app}
